--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
 	"editor.formatOnSave": true,
 	"[jsonc]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"workbench.colorCustomizations": {
+		"activityBar.background": "#22320D",
+		"titleBar.activeBackground": "#2F4612",
+		"titleBar.activeForeground": "#F8FCF2"
 	}
 }
